testsuite/gnatprove/tests/P511-007__nonexisting_ext_obj_dir/test.out


Error while loading project file: test.gpr: could not determine working directory
gnatprove: test.gpr:3:22: undefined external reference
gnatprove: test.gpr:3:22: undefined external reference
